# STAnalyzer

./: .env.example  .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  docker-compose.yml
system_server/: .env.example  .gitignore  AGENTS.md  Dockerfile  SERVICE_DEVELOPMENT_GUIDE.md  USAGE_GUIDE.md  VIEW_CONTAINER_LOGS.md  build_all_services.sh  pyproject.toml  rebuild_all_services.sh  requirements.txt  services_config.json  setup.py  startup_system_server.sh
system_server/database/: DATA_PREPARATION.md  IMPORT_SUMMARY.md  __init__.py  data_loader.py  db_connection.py  import_cellchat.py  import_cellphonedb.py  import_nichenet.py  ligand_receptor.py  test_basic.py  test_functional.py
system_server/scripts/: README.md  check_file_type_references.py  download_cellchat_data.sh  download_nichenet_data.sh  export_cellchat_data.R  export_cellchat_simple.R  export_nichenet_data.R  plot_bubble.R  plot_heatmap.R  plot_network.R  plot_scatter_network.R  plot_stacked_bar.R  setup_r_env.sh  test_config_parser_compatibility.py  validate_service_configs.py
system_server/services/: test_all_new_services.sh  服务差异分析报告.md  空图片问题分析.md
system_server/services/gene-enrichment-analysis/: Dockerfile  OFFLINE_MODE.md  QUICKSTART_OFFLINE.md  README.md  docker-compose.yml  download_enrichr_libraries.py  main.py  requirements.txt  service_config.json
system_server/services/giotto-cpdb-service/: Dockerfile  docker-compose.yml  (+3 more)
system_server/system_server/: __init__.py  config.py  config_parser.py  main.py  service_manager.py  service_scanner.py
system_server/utils/: r_plotting.py
(+557 files in other folders)
